---------------------------------------------------------------------------------------------------
Version: 0.3.24
Date: 2025-07-18
  Changes:
    - Updated water filtration icons
---------------------------------------------------------------------------------------------------
Version: 0.3.23
Date: 2025-07-11
  Features:
    - Added ruthenium recipe chain
    - Added iridium recipe chain
    - Added osmium recipe chain
    - Added late game ion chromatography recipes for rhenium and palladium
  Changes:
    - Reduced output of rhenium recipe
    - Updated rhodium recipe chain
    - Photodiode and photovoltaic cell now require arsenic iodide
  Bugfixes:
    - Fixed locale of recently added items, fluids, recipes and technologies
    - Fixed platinum recipe chain
    - Fixed that some recipes could not be crafted in steel and electric furnace
    - Fast inserter does now not require electronic science
    - Landfill from sand is now unlocked in landfill technology
    - Potassium cyanide can now be crafted on chemical plant
    - Optical sensor now requires cadmium processing
    - Rocket fuel from peroxide now unlocked in rocket silo technology
---------------------------------------------------------------------------------------------------
Version: 0.3.22
Date: 2025-07-04
  Features:
    - Added items and fluids for processing platinum group metals (before called noble metals)
  Changes:
    - Removed scrap
    - Changed electrode recipe
    - Changed recipe and technology requirements for advanced chemical plant
    - Changed recipe chains for all noble metals and technologies
    - Renamed noble metals smelting technology to electrum
    - Removed electrode from iridium recipe
  Bugfixes:
    - Fixed some recipe icons
    - Fixed dependancies in tech tree
---------------------------------------------------------------------------------------------------
Version: 0.3.21
Date: 2025-06-27
  Features:
    - Added bromine recipe chain